[package]
name = "defmtusb"
description = "defmt logging over USB interface"

version = "0.2.0"
edition = "2021"

readme = "README.md"
repository = "https://github.com/soldierkam/defmtusb"

license = "MIT OR MPL-2.0"

publish = true

categories = ["development-tools::debugging", "embedded", "no-std"]
keywords = ["defmt", "embedded", "logging", "usb"]



[dependencies]

[dependencies.critical-section]
version = "*"

[dependencies.defmt]
version = "=1.0.1"

[dependencies.embassy-futures]
version = "0.1.0"

[dependencies.embassy-time]
version = "0.4.0"
features = ["defmt", "defmt-timestamp-uptime"]

[dependencies.embassy-usb]
version = "0.4.0"

[dependencies.static_cell]
version = "^2.1"
features = ["nightly"]

[features]
default = ["buffersize-256"]

buffersize-64   = []
buffersize-128  = []
buffersize-256  = []
buffersize-512  = []
buffersize-1024 = []
